# reddit-sentinel

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  buildspec-build.yml  buildspec-deploy.yml  buildspec-test.yml
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py  schemas.py
backend/tests/: conftest.py  test_placeholder.py
infrastructure/: app.py  cdk.context.json  cdk.json
infrastructure/stacks/: application_stack.py  pipeline_stack.py
